1999-05-19  Dominik Vogt  <dominik_vogt@gmx.de>

	* configure.in: changed version to 2.3.3

	* fvwm/menus.h: more preparations for tear-off menus

	* fvwm/menus.c (MenuInteraction): fixed coredump with double key press

1999-05-18  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Parse.h (MAX_TOKEN_LENGTH): increased MAX_TOKEN_LENGTH from 255
	to 1023. Was not big enough for ImagePath!

	* fvwm/modconf.c (SendDataToModule): send the MoveThreshold value to
	modules

1999-05-18  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.h (common_flags_type): new member has_depressable_border.

	* fvwm/window_flags.h (HAS_DEPRESSABLE_BORDER): accessor macro.

	* fvwm/style.c (ProcessNewStyle): new styles
	DepressableBorder/FirmBorder to set has_depressable_border.

	* fvwm/borders.c (SetBorder): remove undocumented dependency of
	border depressability on has_mwm_buttons. Use
	has_depressable_border instead.

Tue May 18 12:44:11 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* acinclude.m4: AC_FUNC_SELECT may fail on certain AIX machines;
	bugfix from Lars Hecking.

1999-05-18  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c: menus.c should be reentrant now; the MenuRoot struct
	itself still needs some work, but not today

	* fvwm/menus.c: removed extern reference to Tmp_win
	removed extern reference to Context
	removed static variables dkp_...
	made position hint code reentrant
	removed extern reference to ButtonWindow
	made fWarpPointerToTitle code reentrant
	removed extern reference to Event

	* fvwm/misc.h:
	* fvwm/misc.c (check_if_fvwm_window_exists): function to make sure that
	the given FvwmWindow structure is still valid

1999-05-17  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move_resize.c:
	* fvwm/events.c: dont use external menuFromFrameOrWindowOrTitlebar
	anymore

	* fvwm/menus.h:
	* fvwm/menus.c: renamed the flags, removed 'allflags' from unions and
	restructured MenuRoot structure.